# project

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  _fix_setup.py  docker-compose.dev.yml  docker-compose.yml  main.py  make.bat  mkdocs.yml  pyproject.toml  requirements.txt  setup_project.py
.github/workflows/: ci.yml  release.yml
AI/: описание для сокомандников.txt
AI/описание/: описание_проекта_13.06.2026.txt
AI/планы/: план_1-5_12.06.2026.txt  план_11-15_12.06.2026.txt  план_16-19_12.06.2026.txt  план_20-24_14.06.2026.txt  план_25-29_14.06.2026.txt  план_30-34_14.06.2026.txt  план_35-39_14.06.2026.txt  план_40-44_14.06.2026.txt  план_45-49_14.06.2026.txt  план_50-54_14.06.2026.txt  план_6-10_12.06.2026.txt
AI/промпты/: промпт_ии_для кодинга.txt  промпт_планировщик.txt
configs/: config.json  development.json  domain_keywords.json  domain_templates.json  production.json
data/: eval_dataset.json  export_test.json  knowledge_base.db  synonyms.json
docs/: api.md  configuration.md  index.md  scripts.md
scripts/: build_centroids.py  build_faiss.py  build_fallback.py  build_synonyms.py  evaluate.py  export_kb.py  healthcheck.py  init_db.py  profile.py  run_api.py  seed_data.py  setup_all.py  update_kb.py  update_relations.py
src/: aggregation.py  api.py  cache.py  config.py  embeddings.py  fallback.py  generative.py  knowledge_base.py  lemmatizer.py  metrics.py  preprocess.py  sessions.py  synonyms.py  text_cleaner.py  utils.py  vectorize.py
tests/: test_aggregation.py  test_api.py  test_cache.py  test_config.py  test_embeddings.py  test_fallback.py  test_generative.py  test_knowledge_base.py  test_lemmatizer.py  test_metrics.py  test_pipeline.py  test_pipeline_integration.py  test_preprocess_base.py  test_preprocess_full.py  test_sessions.py  test_synonyms.py  test_text_cleaner.py  test_vectorize.py
