[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "ai-terminator"
version     = "0.9.0"
description = "Интеллектуальный помощник по параметрам технических терминов"
readme      = "README.md"
requires-python = ">=3.10"
license     = {text = "MIT"}
authors     = [{name = "AI-Terminator Team"}]
keywords    = ["nlp", "knowledge-base", "russian", "terminology"]

dependencies = [
    "pymorphy3>=2.0.0",
    "pymorphy3-dicts-ru>=2.4.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
api        = ["fastapi>=0.100.0", "uvicorn>=0.23.0", "httpx>=0.24.0"]
metrics    = ["prometheus_client>=0.17.0"]
generative = ["transformers>=4.30.0", "torch>=2.0.0"]
faiss      = ["faiss-cpu>=1.7.0"]
synonyms   = ["ruwordnet>=1.0.0"]
dev        = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
all        = [
    "fastapi>=0.100.0", "uvicorn>=0.23.0", "httpx>=0.24.0",
    "prometheus_client>=0.17.0",
    "transformers>=4.30.0", "torch>=2.0.0",
    "faiss-cpu>=1.7.0",
    "ruwordnet>=1.0.0",
    "pytest>=7.0.0", "pytest-cov>=4.0.0", "ruff>=0.4.0",
    "mypy>=1.0.0", "pre-commit>=3.0.0",
]

[project.scripts]
ai-terminator = "main:main"

# ============================================================
# pytest
# ============================================================
[tool.pytest.ini_options]
testpaths       = ["tests"]
python_files    = ["test_*.py"]
python_classes  = ["Test*"]
python_functions = ["test_*"]
addopts         = "-v --tb=short"
log_cli         = true
log_cli_level   = "WARNING"
filterwarnings  = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ============================================================
# mypy
# ============================================================
[tool.mypy]
python_version       = "3.10"
warn_return_any      = true
warn_unused_configs  = true
ignore_missing_imports = true
strict               = false
exclude              = ["venv/", "build/", "dist/"]

[[tool.mypy.overrides]]
module                 = "src.*"
disallow_untyped_defs  = false
disallow_any_unimported = false

# ============================================================
# ruff
# ============================================================
[tool.ruff]
target-version = "py310"
line-length    = 100
exclude        = ["venv/", "build/", "dist/", ".git/"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # длинные строки -- контролируется line-length
    "B008",  # вызовы функций в дефолтах (FastAPI Depends)
    "N806",  # Variable in function should be lowercase (ML-конвенции: D, V)
]

[tool.ruff.lint.per-file-ignores]
"tests/*"   = ["S101"]   # assert в тестах -- норма
"scripts/*" = ["T201"]   # print в скриптах -- норма

[tool.ruff.lint.isort]
known-first-party        = ["src", "scripts"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style             = "double"
indent-style            = "space"
skip-magic-trailing-comma = false

# ============================================================
# coverage
# ============================================================
[tool.coverage.run]
source = ["src"]
omit   = ["venv/*", "tests/*", "scripts/*"]

[tool.coverage.report]
skip_empty    = true
show_missing  = true
precision     = 1
